# cambrian-hack

./: Anchor.toml  DESIGN.md  README.md  SCAFFOLDING.md
avs/: docker-compose.yml
avs/payloads/: payload-demo.ts  payload-mpl-demo.ts  payload-nft-demo.ts  payload-spl-demo.ts  payload-update-mint-nft-auth.ts
frontend/: Dockerfile  docker-compose.yml  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/actions/: nodes.ts  proposals.ts  token-actions.ts
frontend/app/api/: validators.ts
frontend/app/components/: auth-check.tsx  columns.tsx  explorer-content.tsx  header.tsx  login-button.tsx  mobile-sidebar.tsx  programs-content.tsx  proposals-content.tsx  sidebar.tsx  staking-content.tsx
frontend/app/constants/: programs.ts
frontend/app/hooks/: useJitoValidators.ts  useTokenBalances.ts  useTokenMinting.ts  useValidatorNodes.ts  useVaultStaking.ts  useWalletConnection.ts
frontend/app/ncn/: columns.tsx  page.tsx
frontend/app/proposals/: page.tsx
frontend/app/providers/: WalletProvider.tsx
frontend/app/services/: jitoVaultService.ts
frontend/app/settings/: page.tsx
frontend/app/staking/: page.tsx
frontend/components/: NodeStatus.tsx
frontend/components/ui/: slider.tsx
frontend/types/: nodes.ts  programs.ts  proposals.ts
programs/oracle-program/: Cargo.toml
validator/: .gitignore  Cargo.toml  Dockerfile  README.md  VALIDATOR_SETUP.md  config.example.json  docker-compose.yml
validator/config/: default.json
validator/src/: config.rs  main.rs  ping_client.rs  status.rs
(+4 files in other folders)
