[package]
name = "ping-validator"
version = "0.1.0"
edition = "2021"
description = "Ping Validator service for the Cambrian Platform integration"
authors = ["Ping Network"]

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4"
config = "0.13.3"
local-ip-address = "0.5.6"
solana-client = "1.16.0"
solana-sdk = "1.16.0"
anyhow = "1.0"
async-trait = "0.1.73"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.3.11", features = ["derive"] }
once_cell = "1.18.0"

[dev-dependencies]
actix-rt = "2.8.0" 